--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@angular/compiler": "~8.2.3",
     "@angular/core": "~8.2.3",
     "@angular/forms": "~8.2.3",
+    "@angular/http": "^7.2.15",
     "@angular/platform-browser": "~8.2.3",
     "@angular/platform-browser-dynamic": "~8.2.3",
     "@angular/router": "~8.2.3",
-    "rxjs": "~6.4.0",
+    "rxjs": "^6.5.2",
+    "rxjs-observable": "0.0.7",
     "tslib": "^1.10.0",
+    "users": "^2.0.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
